# bracket-team

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: 2026_bracket.json
docs/: ARCHITECTURE.md
src/bracket_team/: __init__.py  __main__.py  config.py  exceptions.py
src/bracket_team/agents/: __init__.py  analysts.py  llm.py  manager.py  prompt_loader.py  schemas.py
src/bracket_team/agents/prompts/: discussion_challenge.txt  historical_analyst.txt  injury_analyst.txt  manager_decision.txt  odds_analyst.txt  sports_analyst.txt
src/bracket_team/api/: __init__.py  app.py
src/bracket_team/api/routes/: brackets.py  config.py  data.py  matchups.py  results.py  runs.py
src/bracket_team/cli/: __init__.py  commands.py
src/bracket_team/db/: __init__.py  connection.py  models.py  schema.sql
src/bracket_team/scraper/: __init__.py  barttorvik_scraper.py  coordinator.py  espn_player_scraper.py  odds_scraper.py  rate_limiter.py  seed_history.py  sports_scraper.py  team_slug_map.py  tournament_schedule.py
src/bracket_team/service/: __init__.py  bracket_service.py  pipeline.py  run_service.py  scoring.py
static/: index.html
tests/: conftest.py
tests/fixtures/: sample_reports.json
tests/integration/: test_api.py  test_bracket_analysis.py  test_full_matchup.py
tests/unit/: test_context_injection.py  test_pipeline.py  test_rate_limiter.py  test_schemas.py  test_scoring.py  test_seed_history.py  test_sports_scraper.py
(+8 files in other folders)
