[project]
name = "bracket-team"
version = "0.1.0"
description = "Multi-agent LLM system for NCAA bracket prediction"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
gemini = [
    "google-genai>=1.0",
]

[project.scripts]
bracket-team = "bracket_team.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bracket_team"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (real LLM calls)",
]

[tool.ruff]
src = ["src"]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
